--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,5 +1,7 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/ShatteredAtom/ServerSelector
 branches:
 - master
-projects: ServerSelector
+projects:
+  ServerSelector:
+      path: ""
 ...
